--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,13 @@
 <div class="container">
-  <h1 class="title">
-    {{ 'PAGES.HOME.TITLE' | translate }}
-  </h1>
+  <label>Address</label>
+  <input type='text' [(ngModel)]='address' />
+  <label>Password</label>
+  <input type='text' [(ngModel)]='password' />
+  <label>Nickname</label>
+  <input type='text' [(ngModel)]='nickname' />
+  <br />
+  <button (click)='connect()'>Connect</button>
+  <button (click)='disconnect()'>Disconnect</button>
+  <button (click)='mute(true)'>Mute</button>
+  <button (click)='mute(false)'>Unmute</button>
 </div>
