--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,17 +1,114 @@
 .container {
-  height: 100%;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-flow: row nowrap;
+  height: 100%;
 
-  // background: url(../../../assets/background.jpg) no-repeat center fixed;
-  // -webkit-background-size: cover; /* pour anciens Chrome et Safari */
-  // background-size: cover; /* version standardisée */
 
-  .title {
-    // color: white;
-    margin:0;
-    padding:50px 20px;
+  .sidebar {
+    color: white;
+    background: #333;
+    width: 300px;
+    border-right: 3px solid red;
+    flex: 0 0 300px;
+
+    button {
+      cursor: pointer;
+      border: 2px solid darken(tomato, 25%);
+      margin: 1px;
+      background: tomato;
+      border-radius: 5px;
+      padding: 10px 20px;
+      &:hover {
+        background: darken(tomato, 5%);
+      }
+    }
+
+    label {
+      float: left;
+    }
+
+    input {
+      padding: 5px;
+      float: right;
+    }
+  }
+
+  .main {
+    display: flex;
+    flex-flow: column nowrap;
+    flex-grow: 1;
+    // align-items: center;
+    // justify-content: center;
+    // background: url(../../../assets/background.jpg) no-repeat center fixed;
+    // -webkit-background-size: cover; /* pour anciens Chrome et Safari */
+    // background-size: cover; /* version standardisée */
+
+    .header {
+      border-bottom: 2px solid darkgrey;
+      flex: 0 0 50px;
+      justify-content: center;
+      align-items: center;
+      display: flex;
+      font-weight: bold;
+      font-size: 20px;
+    }
+
+    .messages {
+      display: flex;
+      flex-direction: column-reverse;
+      flex-grow: 1;
+      overflow-y: auto;
+
+      .wrapper {
+        .message {
+          padding: 6px 0;
+          // position: absolute;
+          // bottom: 0;
+          // height: 100%;
+
+          &:nth-child(odd) {
+            background: lightgrey;
+          }
+
+          &:last-child {
+            background: salmon;
+            margin-bottom: 16px;
+          }
+
+          .content {
+            margin-left: 20px;
+            margin-right: 20px;
+
+            .name {
+              font-weight: bold;
+              .time {
+                color: #333;
+                font-weight: lighter;
+              }
+            }
+
+            .body {
+              text-decoration: underline;
+            }
+
+          }
+        }
+      }
+    }
+
+    .input {
+      flex: 0 0 50px;
+      background: skyblue;
+      padding: 10px;
+
+      input {
+        padding: 5px;
+        width: 100%;
+        height: 100%;
+        box-sizing: border-box;
+      }
+    }
+
   }
 
 }
