--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -5,11 +5,30 @@
 
 
   .sidebar {
-    color: white;
+    color: rgba(220, 220, 220, 1);
     background: #333;
     width: 300px;
     border-right: 3px solid red;
     flex: 0 0 300px;
+
+    .new-channel {
+      font-size: 1.5em;
+
+      &:hover {
+        color: white;
+      }
+    }
+
+    .channels {
+      .channel {
+        cursor: pointer;
+
+        &:hover {
+          color: white;
+          background: rgba(255, 255, 255, 0.5);
+        }
+      }
+    }
 
     button {
       cursor: pointer;
@@ -43,71 +62,6 @@
     // -webkit-background-size: cover; /* pour anciens Chrome et Safari */
     // background-size: cover; /* version standardisée */
 
-    .header {
-      border-bottom: 2px solid darkgrey;
-      flex: 0 0 50px;
-      justify-content: center;
-      align-items: center;
-      display: flex;
-      font-weight: bold;
-      font-size: 20px;
-    }
-
-    .messages {
-      display: flex;
-      flex-direction: column-reverse;
-      flex-grow: 1;
-      overflow-y: auto;
-
-      .wrapper {
-        .message {
-          padding: 6px 0;
-          // position: absolute;
-          // bottom: 0;
-          // height: 100%;
-
-          &:nth-child(odd) {
-            background: lightgrey;
-          }
-
-          &:last-child {
-            background: salmon;
-            margin-bottom: 16px;
-          }
-
-          .content {
-            margin-left: 20px;
-            margin-right: 20px;
-
-            .name {
-              font-weight: bold;
-              .time {
-                color: #333;
-                font-weight: lighter;
-              }
-            }
-
-            .body {
-              text-decoration: underline;
-            }
-
-          }
-        }
-      }
-    }
-
-    .input {
-      flex: 0 0 50px;
-      background: skyblue;
-      padding: 10px;
-
-      input {
-        padding: 5px;
-        width: 100%;
-        height: 100%;
-        box-sizing: border-box;
-      }
-    }
 
   }
 
