--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import '~bootstrap/scss/bootstrap';
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
 
 html, body {
   height: 100%;
@@ -6,4 +7,8 @@ html, body {
 
 .clear {
   clear: both;
+}
+
+.pointer {
+  cursor: pointer;
 }
