--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 @import '~bootstrap/scss/bootstrap';
-@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+@import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
 
 html, body {
   height: 100%;
