--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,16 +3,16 @@
 </div>
 
 <div class='center'>
-  <div class='login'>
-      <div class='form-group'>
-        <label>Email</label>
-        <input class='form-control' type='text' [(ngModel)]='email' placeholder='someone@email.com' />
-      </div>
-      <div class='form-group'>
-        <label>Password</label>
-        <input class='form-control' type='password' [(ngModel)]='password' placeholder='************' />
-      </div>
-      <button class='btn btn-outline-dark' type='button' (click)='signUp()'>Sign Up</button>
-      <button class='btn btn-primary float-right' type='button' (click)='login()'>Login</button>
-  </div>
+  <mat-card class='login'>
+    <mat-form-field>
+      <mat-label>Email</mat-label>
+      <input matInput type='text' [(ngModel)]='email' placeholder='someone@email.com' />
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Password</mat-label>
+      <input matInput type='password' [(ngModel)]='password' placeholder='************' />
+    </mat-form-field>
+    <button mat-raised-button color='accent' type='button' (click)='signUp()'>Sign Up</button>
+    <button mat-raised-button color='accent' class='float-right' type='button' (click)='login()'>Login</button>
+  </mat-card>
 </div>
