--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,24 @@
-@import '~bootstrap/scss/bootstrap';
-@import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
+@import '~bootstrap/scss/functions';
+@import '~bootstrap/scss/variables';
+@import '~bootstrap/scss/mixins';
+@import '~bootstrap/scss/reboot';
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+// @import '~@angular/material/prebuilt-themes/pink-bluegrey.css';
 
 html, body {
   height: 100%;
+}
+
+mat-form-field {
+  width: 100%;
+}
+
+.float-right {
+  float: right;
+}
+
+.float-left {
+  float: left;
 }
 
 .clear {
