--- a/src/app/components/channel/channel.component.scss
+++ b/src/app/components/channel/channel.component.scss
@@ -27,15 +27,15 @@
         .message {
           padding: 6px 0;
           &:hover {
-            background: rgba(0, 0, 0, 0.1);
+            background: rgba(0, 0, 0, 0.05);
           }
           // position: absolute;
           // bottom: 0;
           // height: 100%;
 
-          &:nth-child(even) {
-            background: lightgrey;
-          }
+          // &:nth-child(even) {
+          //   background: lightgrey;
+          // }
 
           &:last-child {
             // background: salmon;
@@ -49,13 +49,14 @@
             .name {
               font-weight: bold;
               .time {
-                color: #333;
+                color: #777;
                 font-weight: lighter;
+                font-size: 0.8em;
               }
             }
 
             .body {
-              text-decoration: underline;
+              // text-decoration: underline;
             }
 
           }
@@ -65,14 +66,15 @@
 
     .input {
       flex: 0 0 50px;
-      background: skyblue;
-      padding: 10px;
+      // background: skyblue;
+      padding: 0 10px;
 
-      input {
-        padding: 5px;
-        width: 100%;
-        height: 100%;
-        box-sizing: border-box;
+      ::ng-deep.mat-form-field-wrapper {
+        padding-bottom: 0;
+      }
+
+      textarea {
+        resize: none;
       }
     }
 
