--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -56,7 +56,7 @@
 
   .main {
     display: flex;
-    flex-flow: column nowrap;
+    // flex-flow: column nowrap;
     flex-grow: 1;
     // align-items: center;
     // justify-content: center;
@@ -64,6 +64,16 @@
     // -webkit-background-size: cover; /* pour anciens Chrome et Safari */
     // background-size: cover; /* version standardisée */
 
+    .toggle {
+      display: flex;
+      align-items: center;
+      background: rgba(0, 0, 0, 0.2);
+      cursor: pointer;
+
+      &:hover {
+        background: rgba(0, 0, 0, 0.3);
+      }
+    }
 
   }
 
