--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -52,6 +52,7 @@
         </ul>
         <li>@YOCraft</li>
       </ul>
+      <button mat-raised-button color='accent' (click)='toggleTheme()'>Toggle Dark Mode</button>
       <button mat-raised-button color='warn' routerLink='/logout'>Logout</button>
       {{ user?.email }}
     </div>
