--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 @import '~bootstrap/scss/mixins';
 @import '~bootstrap/scss/reboot';
 // @import '~@angular/material/prebuilt-themes/indigo-pink.css';
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+// @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 // @import '~@angular/material/prebuilt-themes/pink-bluegrey.css';
 
 html, body {
