--- a/src/app/dialogs/delete-channel/delete-channel.component.html
+++ b/src/app/dialogs/delete-channel/delete-channel.component.html
@@ -10,5 +10,5 @@
 <mat-dialog-actions style='justify-content: space-around'>
   <button mat-button mat-dialog-close>Cancel</button>
   <!-- The mat-dialog-close directive optionally accepts a value as a result for the dialog. -->
-  <button mat-button color='warn' [mat-dialog-close]='true' [disabled]='confirmation != channel.name'>Delete</button>
+  <button mat-button color='warn' (click)='delete()' [disabled]='confirmation != channel.name || saving'>Delete</button>
 </mat-dialog-actions>
