--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,6 +13,7 @@
       <div>
         <button type='button' mat-raised-button color='primary' (click)='connect()'>Connect</button>
         <button type='button' mat-raised-button color='primary' (click)='disconnect()'>Disconnect</button>
+        <button type='button' mat-raised-button color='primary' (click)='openSettings()'>Settings</button>
       </div>
       <div>
         <button type='button' mat-raised-button color='primary' (click)='mute(true)'>Mute</button>
@@ -20,29 +21,22 @@
       </div>
     </div>
     <div class='clear'>
-      <label>Threshold</label>
-      <!-- <input type='range' min='-50' max='50' step='1' (change)='VAD = $event.target.value' /> -->
-      <mat-slider [min]='-50' [max]='50' [step]='1' [tickInterval]='5' [thumbLabel]='true' [value]='VAD' (change)='VAD = $event.value'></mat-slider>
-      <button type='button' mat-raised-button color='primary' (click)='startVADTest()'>Start Test</button>
-      <button type='button' mat-raised-button color='primary' (click)='stopVADTest()'>Stop Test</button>
-      <span>{{ currentDecibels > VAD }}</span>
-      <!-- <input type='range' min='-50' max='50' step='1' [(ngModel)]='currentDecibels' /> -->
-      <mat-slider [min]='-50' [max]='50' [step]='1' [(ngModel)]='currentDecibels' disabled></mat-slider>
-      <div>
-        <label>AGC:</label>
-        <mat-checkbox [checked]='AGC' (change)='AGC = $event.checked'></mat-checkbox>
-      </div>
-    </div>
-    <div class='clear'>
-      <mat-nav-list class='channels'>
+      <pre>{{ connectedClients | json }}</pre>
+      <mat-action-list class='channels'>
         <h2 mat-subheader>
           Channels <button mat-icon-button (click)='newChannel()' class='new-channel'><mat-icon [inline]='false'>add_circle</mat-icon></button>
         </h2>
         <mat-list-item class='channel' *ngFor='let channel of channels | async' (click)='switchToChannel(channel)'>
-          #{{ channel.name }}
+          <h3 matLine>#{{ channel.name }}</h3>
+          <div matLine>
+            <mat-icon style='color: blue'>mic</mat-icon>
+            <!-- <mat-icon style='color: blue'>mic_none</mat-icon> -->
+            <!-- <mat-icon style='color: blue'>mic_off</mat-icon> -->
+            <span>Adam</span>
+          </div>
         </mat-list-item>
-      </mat-nav-list>
-      Voice
+      </mat-action-list>
+      <!-- Voice
       <ul>
         <li>@General</li>
         <ul>
@@ -55,7 +49,7 @@
           <li>Matt</li>
         </ul>
         <li>@YOCraft</li>
-      </ul>
+      </ul> -->
       <button mat-raised-button color='accent' (click)='toggleTheme()'>Toggle Dark Mode</button>
       <button mat-raised-button color='warn' routerLink='/logout'>Logout</button>
       {{ user?.email }}
