--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,13 +1,13 @@
 @import '~@angular/material/theming';
 
-// $chumspeak-primary: mat-palette($mat-deep-purple);
-$chumspeak-primary: mat-palette($mat-blue, 700);
-// $chumspeak-primary-dark: mat-palette($mat-purple);
-$chumspeak-primary-dark: mat-palette($mat-blue);
-// $chumspeak-accent:  mat-palette($mat-amber);
-$chumspeak-accent:  mat-palette($mat-amber, 400);
-$chumspeak-warn:  mat-palette($mat-red);
+// $chumchat-primary: mat-palette($mat-deep-purple);
+$chumchat-primary: mat-palette($mat-blue, 700);
+// $chumchat-primary-dark: mat-palette($mat-purple);
+$chumchat-primary-dark: mat-palette($mat-blue);
+// $chumchat-accent:  mat-palette($mat-amber);
+$chumchat-accent:  mat-palette($mat-amber, 400);
+$chumchat-warn:  mat-palette($mat-red);
 
-$primary: mat-color($chumspeak-primary);
-$accent:  mat-color($chumspeak-accent);
-$warn:    mat-color($chumspeak-warn);
+$primary: mat-color($chumchat-primary);
+$accent:  mat-color($chumchat-accent);
+$warn:    mat-color($chumchat-warn);
