--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,3 +37,10 @@ mat-form-field {
 .pointer {
   cursor: pointer;
 }
+
+.mat-form-field-flex { align-items: center; }
+.mat-form-field-prefix,
+.mat-form-field-suffix {
+  display: inline-flex;
+  align-items: center;
+}
